# wasmcloud-ollama

./: .gitignore  .gitmodules  Makefile  README.md
actor-adaptor/: Cargo.toml
actor-adaptor/src/: lib.rs
actor-adaptor/wit/: world.wit
examples/openai-server/: Cargo.toml
examples/openai-server/src/: lib.rs
hack/: wasi_snapshot_preview1.proxy.wasm
ollama-adaptor/: Cargo.toml
ollama-adaptor/src/: lib.rs
openai-server/wit/: world.wit
provider/: example-config.json  go.mod  go.sum  provider.go  types.go
provider/cmd/remote-provider/: main.go
provider/cmd/standalone-provider/: adaptor.go  main.go
wit/: ollama.wit
