[package]
name = "ollama-openai-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
wit-bindgen = { version = "0.16" }
http = "1.0.0"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
endpoints = { version = "0.2.0" }
